--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "precommit": "npm run lint-fix",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.client.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.client.js",
+    "study": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.practice.js"
   },
   "author": "",
   "license": "ISC",
