--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "precommit": "npm run lint-fix",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.client.js",
-    "study": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.practice.js"
+    "study": "cross-env NODE_ENV=development webpack-dev-server --open --config build/webpack.config.study.js"
   },
   "author": "",
   "license": "ISC",
